<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.FundWalletActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:paddingBottom="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/fund_wallet"
            android:textStyle="bold"
            android:id="@+id/fund_wallet"
            android:textSize="17sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fund_wallet"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_launcher_round"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mr_ade"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginStart="17dp"
                android:textColor="@color/darkWhite"
                android:layout_marginLeft="17dp" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/card_view"
        android:background="@drawable/curve_edges_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="130dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_wallet"
                android:textColor="@color/darkerGrey"
                android:textSize="20sp" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@drawable/curve_edges_darker_white"
                            android:padding="20dp"
                            android:layout_alignParentStart="true"
                            android:id="@+id/add_money"
                            tools:ignore="RelativeOverlap"
                            android:layout_alignParentLeft="true">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/wallet"
                                android:contentDescription="@string/todo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/add_money"
                                android:textSize="20sp"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:gravity="center_horizontal" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@drawable/curve_edges_darker_white"
                            android:padding="20dp"
                            android:layout_alignParentEnd="true"
                            android:id="@+id/withdrawal"
                            android:layout_alignParentRight="true">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/withdraw"
                                android:contentDescription="@string/todo" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/withdraw"
                                android:textAlignment="center"
                                android:textSize="20sp"
                                android:textColor="@android:color/black"
                                android:gravity="center_horizontal" />

                        </LinearLayout>


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@drawable/curve_edges_darker_white"
                            android:padding="20dp"
                            android:layout_alignParentStart="true"
                            android:id="@+id/transfer"
                            android:layout_alignParentLeft="true">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/money"
                                android:contentDescription="@string/todo" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/transfer"
                                android:textAlignment="center"
                                android:textSize="20sp"
                                android:textColor="@android:color/black"
                                android:gravity="center_horizontal" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@drawable/curve_edges_darker_white"
                            android:padding="20dp"
                            android:layout_alignParentEnd="true"
                            android:id="@+id/balance"
                            android:layout_alignParentRight="true">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/balance"
                                android:contentDescription="@string/todo" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/balance"
                                android:textAlignment="center"
                                android:textSize="20sp"
                                android:textColor="@android:color/black"
                                android:gravity="center_horizontal" />

                        </LinearLayout>


                    </RelativeLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>